--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>Adivinhe um número de 1 a 10</p>
 
             <form>
-                <input id="inputNumber" type="number">
+                <input id="inputNumber" type="number" min="0" max="10">
                 <button id="btnTry">Tentar</button>
             </form>
         </div>
